# TESLA_BLE_TFT

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_PLAN.md  README.md  build_esp.bat  build_only.bat  build_only.sh  flash.bat  flash.sh  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  simulation_script.md
GUI_design/: ESP32_TFT_LGVL_GUI.sll  ESP32_TFT_LGVL_GUI.slp  ESP32_TFT_LGVL_GUI.spj  NO DATA.docx  Smart_Gadget.sll  Smart_Gadget.spj  design_prompt.txt  project.info
GUI_design/assets/fonts/: ui_font_Number.c  ui_font_Number.fcfg  ui_font_Number_small.c  ui_font_Number_small.fcfg  ui_font_google_sans.fcfg
GUI_design/components/: Alarm Comp.ecomp  Cargear.ecomp
LGVL_TEST/Smart_Gadget/: .project  lv_conf.h  pc_simulator.launch
LGVL_TEST/Smart_Gadget/ui/: CMakeLists.txt  filelist.txt  project.info  ui.h  ui_events.h  ui_helpers.h
LGVL_TEST/Smart_Gadget/ui/components/: ui_comp.c  ui_comp_cargear.c  ui_comp_hook.c
LGVL_TEST/Smart_Gadget/ui/fonts/: ui_font_google_sans.c
LGVL_TEST/Smart_Gadget/ui/images/: ui_img_avatar_png.c  ui_img_backward_png.c  ui_img_charger_power_png.c  ui_img_chatbox2_png.c  ui_img_chatbox_png.c  ui_img_clock_hour_png.c  ui_img_clock_sec_png.c  ui_img_cloud_png.c  ui_img_fsd_png.c  (+9 more)
Reference/yn056-esp32-S3-xiaozhi/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
Simulation_app/: HANDOVER.md  README.md  requirements.txt  run.bat  sim_server.py
components/tesla-ble/include/: vehicle.h
components/tesla-ble/src/: client.cpp  message_builders.cpp  peer.cpp  tb_logging.cpp  vehicle.cpp
doc/: CROSS_DEVICE_DEV_GUIDE.md  flashing_guide.md  hardware_wiring.md  tesla_ble_data_reference.md
main/: CMakeLists.txt  Kconfig.projbuild  ble_adapter.cpp  ble_adapter.h  dash_data.h  display.cpp  display.h  fonts.cpp  fonts.h  idf_component.yml  images.h  main.cpp  sim_payload.h  storage_adapter.cpp  storage_adapter.h
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_helpers.c
main/ui/components/: ui_comp.h  ui_comp_cargear.c  ui_comp_cargear.h  ui_comp_hook.h
main/ui/fonts/: ui_font_Number.c
main/ui/images/: ui_img_509039616.c  ui_img_album_png.c  ui_img_car1_png.c  ui_img_clock_min_png.c  ui_img_door_open_3_png.c  ui_img_door_open_alarm_png.c  ui_img_door_open_png.c  ui_img_forward_png.c  ui_img_keycard1_png.c  ui_img_keycard2_png.c  ui_img_keycard_titlecn_png.c  ui_img_landing3_png.c  ui_img_landing_png.c  ui_img_mainlight_png.c  ui_img_opendoor_png.c  ui_img_park_png.c  ui_img_phone_png.c  ui_img_play_png.c  ui_img_sync_3_png.c  ui_img_tesla_charging_2_png.c  ui_img_weather_1_png.c  ui_img_weather_3_png.c
main/ui/screens/: ui_Charge.c  ui_Charge.h  ui_Door_open.c  ui_Door_open.h  ui_Drive.c  ui_Drive.h  ui_Landing.c  ui_Landing.h  ui_Screen_BLE_Connect.c  ui_Screen_BLE_Connect.h  ui_Screen_Keycard_Pair.c  ui_Screen_Keycard_Pair.h  ui_Screen_Session_Sync.c  ui_Screen_Session_Sync.h
(+12 files in other folders)
